build new border ai website

--- a/eligibility-check/index.html
+++ b/eligibility-check/index.html
@@ -4,25 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
-    <title>Border AI</title>
+    <title>Eligibility check · Border AI</title>
     <link rel="stylesheet" href="/assets/css/theme.css" />
     <link rel="stylesheet" href="/assets/css/components.css" />
   </head>
-  <body data-page="home">
+  <body data-page="eligibility">
     <div class="page">
       <div data-mount="navbar"></div>
       <main id="main-content">
-        <section class="section hero-section">
-          <div class="container" data-section="hero"></div>
-        </section>
-        <section class="section">
-          <div class="container" data-section="features"></div>
-        </section>
-        <section class="section surface">
-          <div class="container" data-section="eligibility-cta"></div>
-        </section>
-        <section class="section" id="pricing">
-          <div class="container" data-section="pricing"></div>
+        <section class="eligibility-page">
+          <div class="container" data-section="eligibility"></div>
         </section>
       </main>
       <div data-mount="footer"></div>
