--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <section class="section hero-section">
           <div class="container" data-section="hero"></div>
         </section>
+        <section class="section surface">
+          <div class="container" data-section="highlights"></div>
+        </section>
         <section class="section">
           <div class="container" data-section="features"></div>
         </section>
