new visa match section in eligibility cjhack page.

--- a/eligibility-check/index.html
+++ b/eligibility-check/index.html
@@ -12,8 +12,8 @@
     <div class="page">
       <div data-mount="navbar"></div>
       <main id="main-content">
-        <section class="eligibility-page">
-          <div class="container" data-section="eligibility"></div>
+        <section class="section">
+          <div class="container" data-section="eligibility-flow"></div>
         </section>
       </main>
       <div data-mount="footer"></div>
